@startuml
package bank {
class MoneyBag{
- bag : ArrayList<Money>
}
class Money {
- amount: float
- currency: String
+ this(amount: int, currency: String)
+ add(that: Money): Money
+ sub(that: Money): Money
}

class Person{
- firstName: String
- lastName: String
- addr: String
+ this(firstName: String, lastName: String, addr: String)
}
class Account{
- number: int
- owner: Person
- balance: MoneyBag
- maxOverdraw: float
- maxWithdrawal: float
+ this(number: int, owner: Person)
+ this(number: int, owner: Person, initialDeposit: float)
+ this(number: int, owner: Person, initialDeposit: float, maxOverdraw: float, maxWithdrawal: float)
+ credit(amount: float): void
+ debit(amount: float): void
+ transfer(beneficiary: Account, amount: float): void
}
}
class Main {
+ {static} main(args: String[])
}

Main -- Account
Main -- Person

MoneyBag *-- Money
Account *-- MoneyBag
Account o-- Person
@enduml